# AI-resume-chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: update_space.yml
prompts/: system_prompts.py  user_prompts.py
resources/: summary.txt
tools/: evaluate.py  push_notifications.py  record_unknown_question.py  record_user_details.py  rerun.py  tool_handler.py
